Button overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,14 @@ button{
   padding: 10px 10px;
   border-radius: 10px;
   font-weight: 900;
-  border: none;
+  border: none; 
   margin-right: 50px;
 }
 
+.buttontext{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  display: block;
+  width: 150px;
+}
